; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_ioapic.c_kvm_ioapic_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_ioapic.c_kvm_ioapic_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { %struct.kvm_ioapic* }
%struct.kvm_ioapic = type { i32, i32 }

@KVM_MMIO_BUS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kvm_ioapic_destroy(%struct.kvm* %0) #0 {
  %2 = alloca %struct.kvm*, align 8
  %3 = alloca %struct.kvm_ioapic*, align 8
  store %struct.kvm* %0, %struct.kvm** %2, align 8
  %4 = load %struct.kvm*, %struct.kvm** %2, align 8
  %5 = getelementptr inbounds %struct.kvm, %struct.kvm* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load %struct.kvm_ioapic*, %struct.kvm_ioapic** %6, align 8
  store %struct.kvm_ioapic* %7, %struct.kvm_ioapic** %3, align 8
  %8 = load %struct.kvm_ioapic*, %struct.kvm_ioapic** %3, align 8
  %9 = icmp ne %struct.kvm_ioapic* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  br label %31

11:                                               ; preds = %1
  %12 = load %struct.kvm_ioapic*, %struct.kvm_ioapic** %3, align 8
  %13 = getelementptr inbounds %struct.kvm_ioapic, %struct.kvm_ioapic* %12, i32 0, i32 1
  %14 = call i32 @cancel_delayed_work_sync(i32* %13)
  %15 = load %struct.kvm*, %struct.kvm** %2, align 8
  %16 = getelementptr inbounds %struct.kvm, %struct.kvm* %15, i32 0, i32 1
  %17 = call i32 @mutex_lock(i32* %16)
  %18 = load %struct.kvm*, %struct.kvm** %2, align 8
  %19 = load i32, i32* @KVM_MMIO_BUS, align 4
  %20 = load %struct.kvm_ioapic*, %struct.kvm_ioapic** %3, align 8
  %21 = getelementptr inbounds %struct.kvm_ioapic, %struct.kvm_ioapic* %20, i32 0, i32 0
  %22 = call i32 @kvm_io_bus_unregister_dev(%struct.kvm* %18, i32 %19, i32* %21)
  %23 = load %struct.kvm*, %struct.kvm** %2, align 8
  %24 = getelementptr inbounds %struct.kvm, %struct.kvm* %23, i32 0, i32 1
  %25 = call i32 @mutex_unlock(i32* %24)
  %26 = load %struct.kvm*, %struct.kvm** %2, align 8
  %27 = getelementptr inbounds %struct.kvm, %struct.kvm* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store %struct.kvm_ioapic* null, %struct.kvm_ioapic** %28, align 8
  %29 = load %struct.kvm_ioapic*, %struct.kvm_ioapic** %3, align 8
  %30 = call i32 @kfree(%struct.kvm_ioapic* %29)
  br label %31

31:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @cancel_delayed_work_sync(i32*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @kvm_io_bus_unregister_dev(%struct.kvm*, i32, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @kfree(%struct.kvm_ioapic*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
